Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127760

qtdoc dice example debug assertion failure

    XMLWordPrintable

Details

    • Linux/Wayland
    • abe9e942d (dev), cc35e344c (6.8), aefef2bb7 (tqtc/lts-6.5)

    Description

      Open the dice example from qtdoc: qtdoc/examples/demos/dice. Click and drag the mouse around until the debug assertion hits.

      ASSERT: "n <= size() - pos" in file /home/jonas/Code/qt-dev/qtbase/src/corelib/tools/qvarlengtharray.h, line 62 /home/jonas/Code/qt-dev/qtbase/src/corelib/tools/qvarlengtharray.h: 62

      Stack trace:

      {{
      1 ?? 0x7ffff10a8e44
      2 raise 0x7ffff1050a30
      3 abort 0x7ffff10384c3
      4 qAbort qassert.cpp 46 0x7ffff16fbdf2
      5 qt_message_fatal<QString&> qlogging.cpp 2116 0x7ffff1712793
      6 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) qlogging.cpp 382 0x7ffff170b5fa
      7 QMessageLogger::fatal qlogging.cpp 884 0x7ffff170d72c
      8 qt_assert qassert.cpp 105 0x7ffff16fbe56
      9 QVLABaseBase::verify qvarlengtharray.h 62 0x7ffff71acba8
      10 QVLABase<QSSGRenderCamera *>::operator[] qvarlengtharray.h 156 0x7ffff71acba8
      11 QQuick3DSceneRenderer::getRayFromViewportPos qquick3dscenerenderer.cpp 1093 0x7ffff71a5b41
      12 QQuick3DViewport::getPickResults qquick3dviewport.cpp 1923 0x7ffff71dae09
      13 QQuick3DViewport::internalPick qquick3dviewport.cpp 1804 0x7ffff71da1c9
      14 QQuick3DViewport::event qquick3dviewport.cpp 673 0x7ffff71d4c3e
      15 QCoreApplicationPrivate::notify_helper qcoreapplication.cpp 1326 0x7ffff17f0852
      16 doNotify qcoreapplication.cpp 1253 0x7ffff17f03b8
      17 QCoreApplication::notify qcoreapplication.cpp 1236 0x7ffff17f02ec
      18 QGuiApplication::notify qguiapplication.cpp 2042 0x7ffff36258ad
      19 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1152 0x7ffff17f01b8
      20 QCoreApplication::sendEvent qcoreapplication.cpp 1596 0x7ffff17f0f81
      21 QQuickDeliveryAgentPrivate::sendHoverEvent qquickdeliveryagent.cpp 1073 0x7ffff5d9cc97
      22 QQuickDeliveryAgentPrivate::deliverHoverEventToItem qquickdeliveryagent.cpp 1251 0x7ffff5d9d7af
      23 QQuickDeliveryAgentPrivate::deliverHoverEventRecursive qquickdeliveryagent.cpp 1209 0x7ffff5d9d1e1
      24 QQuickDeliveryAgentPrivate::deliverHoverEventRecursive qquickdeliveryagent.cpp 1196 0x7ffff5d9d177
      25 QQuickDeliveryAgentPrivate::deliverHoverEventRecursive qquickdeliveryagent.cpp 1196 0x7ffff5d9d177
      26 QQuickDeliveryAgentPrivate::deliverHoverEventRecursive qquickdeliveryagent.cpp 1196 0x7ffff5d9d177
      27 QQuickDeliveryAgentPrivate::deliverHoverEvent qquickdeliveryagent.cpp 1114 0x7ffff5d9cdc3
      28 QQuickDeliveryAgentPrivate::handleMouseEvent qquickdeliveryagent.cpp 1770 0x7ffff5da10b9
      29 QQuickDeliveryAgent::event qquickdeliveryagent.cpp 812 0x7ffff5d9b616
      30 QQuickWindow::event qquickwindow.cpp 1535 0x7ffff5ba69f2
      31 QQuickWindowQmlImpl::event qquickwindowmodule.cpp 141 0x7ffff5bc9c76
      32 QCoreApplicationPrivate::notify_helper qcoreapplication.cpp 1326 0x7ffff17f0852
      33 doNotify qcoreapplication.cpp 1253 0x7ffff17f03b8
      34 QCoreApplication::notify qcoreapplication.cpp 1236 0x7ffff17f02ec
      35 QGuiApplication::notify qguiapplication.cpp 2042 0x7ffff36258ad
      36 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1152 0x7ffff17f01b8
      37 QCoreApplication::sendSpontaneousEvent qcoreapplication.cpp 1610 0x7ffff17f1011
      38 QGuiApplicationPrivate::processMouseEvent qguiapplication.cpp 2392 0x7ffff3626de6
      39 QGuiApplicationPrivate::processWindowSystemEvent qguiapplication.cpp 2119 0x7ffff3625e5c
      40 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface.cpp 1114 0x7ffff36f7d1e
      41 userEventSourceDispatch qeventdispatcher_glib.cpp 38 0x7ffff3e6f03f
      42 ?? 0x7ffff210ea89
      43 ?? 0x7ffff21709b7
      44 g_main_context_iteration 0x7ffff210df95
      45 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 395 0x7ffff1cbd09e
      46 QPAEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 87 0x7ffff3e6f2d4
      47 QEventLoop::processEvents qeventloop.cpp 100 0x7ffff18093e0
      48 QEventLoop::exec qeventloop.cpp 191 0x7ffff1809bf5
      49 QCoreApplication::exec qcoreapplication.cpp 1497 0x7ffff17f0bf6
      50 QGuiApplication::exec qguiapplication.cpp 1974 0x7ffff36256a8
      51 main main.cpp 22 0x555555559bc8
      }}

      Attachments

        For Gerrit Dashboard: QTBUG-127760
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes