Fix view3d ray picking race condition

QSSGRenderLayers::renderedCameras is used by two different threads at
the same time. When doing object picking on a view3d (read) and when
preparing for rendering the view3d (write). Adding a qmutex to avoid the
race condition.

Fixes: QTBUG-127760
Change-Id: Icc8d03bbd7a27fce61db62b795ce3f0e1977701f
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit abe9e942d9f10ee216c33575a92fd86a256cce51)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit cc35e344cef8df917e15bcfd8a0349751ade5747)
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>